# ire

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
.github/workflows/: rust.yml
docs/: BUILDING.md  ROADMAP.md
ghidra-wrap/: pcode-rs-wrapper.hh
iir/docs/: DESIGN.md  EXISTING.md
ire/: Cargo.toml
ire-disassembler/: Cargo.toml  build.rs
ire-llvm-tables/: Cargo.toml  build.rs
ire/docs/: ROADMAP.md
pcode-rs/: Cargo.toml  build.rs
pcode-rs/docs/: COMPILATION.md
pcode-rs/ghidra/Ghidra/Features/FileFormats/src/main/java/ghidra/file/formats/android/oat/oatdexfile/: OatDexFile.java  OatDexFileFactory.java  OatDexFileUtilities.java
pcode-rs/src/: lib.rs
scripts/: generate_meson_sleigh.py
src/: lib.rs
src/core/: mod.rs
tree-sitter-sleigh/: Cargo.toml
tree-sitter-sleigh/src/: lib.rs
